# forgeloop

./: .gitignore  README.md  pyproject.toml
forgeloop/: cli.py
forgeloop/agent/: context.py  loop.py  session.py  shutdown.py
forgeloop/config/: app_config.py  guardrails.default.yaml  loader.py
forgeloop/credentials/: redact.py  store.py
forgeloop/feedback/: classifier.py  classify_failure.py  lint_parser.py  renderer.py  test_parser.py  types.py
forgeloop/governance/: approval.py  path_fence.py  rule_engine.py  types.py
forgeloop/llm/: base.py  mock.py  real.py
forgeloop/parser/: parse.py  types.py
forgeloop/server/: app.py  auth.py  schemas.py  sweeper.py
tests/: conftest.py  test_agent_context.py  test_agent_loop.py  test_agent_loop_approval.py  test_agent_shutdown.py  test_cli.py  test_config_app_config.py  test_config_loader.py  test_credentials_redact.py  test_credentials_store.py  test_e2e_approval_flow.py  test_feedback_classifier.py  test_feedback_classify_failure.py  test_feedback_parsers.py  test_governance_approval.py  test_governance_path_fence.py  test_governance_rule_engine.py  test_integration_feedback_loop.py  test_llm_mock.py  test_llm_real.py  test_parser.py  test_server_app.py  test_server_approvals.py  test_server_auth.py  test_server_sweeper.py  test_smoke.py  test_storage_db.py  test_storage_memory.py  test_storage_models.py  test_storage_queries.py  test_tools_base.py  test_tools_done.py  test_tools_list_dir.py  test_tools_read_file.py  test_tools_run_shell.py  test_tools_run_tests.py  test_tools_write_file.py
(+19 files in other folders)
